--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ li{
 	list-style-type:none;
 }
 .indeximgs{
-	width:95%;
+	width:85%;
 }
 #sendenquiry{
 	height:35px;
@@ -145,4 +145,15 @@ li{
 }
 #text{
 	padding-top:40px;
+}
+.boxes{
+	margin:auto;
+	width: 70%;
+	border: 1px solid #3893c8;
+
+}
+.details{
+	margin:auto;
+	margin-top:3%;
+	margin-bottom:3%;
 }
